--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "",
   "main": "eclipse.js",
   "dependencies": {
-    "discord.js": "^11.3.2",
-    "discord-rich-presence": "^0.0.6",
-    "request": "^2.87.0"
+    "discord.js": "11.3.2",
+    "discord-rich-presence": "0.0.6",
+    "request": "2.87.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
 	"start": "node eclipse.js"
 	
   },
