--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "",
   "main": "eclipse.js",
   "dependencies": {
-    "discord.js": "11.3.2",
-    "discord-rich-presence": "0.0.6",
-    "request": "2.87.0"
+    "discord.js": "^11.3.2",
+    "discord-rich-presence": "^0.0.6",
+    "request": "^2.87.0"
   },
   "devDependencies": {},
   "scripts": {
-	"start": "node eclipse.js"
-	
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "KadoH",
   "license": "ISC"
