--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "eclipse.js",
   "dependencies": {
-    "discord.js": "^11.3.2",
-    "discord-rich-presence": "^0.0.6",
-    "request": "^2.87.0"
+    "discord.js": "11.3.2",
+    "discord-rich-presence": "0.0.6",
+    "request": "2.87.0",
+	"moment-timezone": "0.5.14",
+	"moment": "^2.14.1",
+	
   },
   "devDependencies": {},
   "scripts": {
