--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "discord.js": "11.3.2",
     "discord-rich-presence": "0.0.6",
     "request": "2.87.0",
-	"moment-timezone": "0.5.14",
+	"moment-timezone": "^0.5.14",
 	"moment": "^2.14.1",
 	
   },
