--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  
+  "scripts": {
+  "start": "node eclipse.js"
+	},
   "author": "KadoH",
   "license": "ISC"
 }
